# swag_docs/swagger.json
@@ -14,7 +14,8 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Account"
+                    "Account",
+                    "CRUD"
                 ],
                 "summary": "List Account",
                 "parameters": [
@@ -108,7 +109,8 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Account"
+                    "Account",
+                    "CRUD"
                 ],
                 "summary": "Create Account",
                 "parameters": [
@@ -773,7 +775,8 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Account"
+                    "Account",
+                    "CRUD"
                 ],
                 "summary": "Get Account",
                 "parameters": [
@@ -833,7 +836,8 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Account"
+                    "Account",
+                    "CRUD"
                 ],
                 "summary": "Update Account",
                 "parameters": [
@@ -1044,7 +1048,8 @@
                 ],
                 "tags": [
                     "Account",
-                    "Admin"
+                    "AdminOnly",
+                    "CRUD"
                 ],
                 "summary": "List Account",
                 "parameters": [
@@ -1139,7 +1144,8 @@
                 ],
                 "tags": [
                     "Account",
-                    "Admin"
+                    "AdminOnly",
+                    "CRUD"
                 ],
                 "summary": "Create Account",
                 "parameters": [
@@ -1204,7 +1210,8 @@
                 ],
                 "tags": [
                     "Account",
-                    "Admin"
+                    "AdminOnly",
+                    "CRUD"
                 ],
                 "summary": "Count Account",
                 "parameters": [
@@ -1273,7 +1280,8 @@
                 ],
                 "tags": [
                     "Account",
-                    "Admin"
+                    "Admin",
+                    "Store"
                 ],
                 "summary": "Create test account",
                 "parameters": [
@@ -1338,7 +1346,8 @@
                 ],
                 "tags": [
                     "Account",
-                    "Admin"
+                    "AdminOnly",
+                    "CRUD"
                 ],
                 "summary": "Get Account",
                 "parameters": [
@@ -1399,7 +1408,8 @@
                 ],
                 "tags": [
                     "Account",
-                    "Admin"
+                    "AdminOnly",
+                    "CRUD"
                 ],
                 "summary": "Update Account",
                 "parameters": [
@@ -2034,143 +2044,6 @@
                 }
             }
         },
-        "account.AccountWithFeatures": {
-            "type": "object",
-            "title": "AccountWithFeatures",
-            "required": [
-                "id",
-                "urn",
-                "created_by_urn",
-                "updated_by_urn",
-                "status",
-                "deleted",
-                "disabled",
-                "updated_at",
-                "created_at",
-                "first_name",
-                "last_name",
-                "email",
-                "phone",
-                "external_id",
-                "test_user_type",
-                "organization_id",
-                "role",
-                "properties",
-                "signup_properties",
-                "hashed_password",
-                "password_updated_at_ts",
-                "email_verified_at_ts",
-                "last_login_ts",
-                "is_super_user_session",
-                "billing_plan_level",
-                "billing_plan_price",
-                "billing_plan_id",
-                "billing_plan_name",
-                "billing_plan_feature_set",
-                "feature_set_overrides",
-                "feature_set"
-            ],
-            "properties": {
-                "billing_plan_feature_set": {
-                    "$ref": "#/definitions/billing_plan.FeatureSet"
-                },
-                "billing_plan_id": {
-                    "type": "string",
-                    "format": "uuid"
-                },
-                "billing_plan_level": {
-                    "type": "integer"
-                },
-                "billing_plan_name": {
-                    "type": "string"
-                },
-                "billing_plan_price": {
-                    "type": "integer"
-                },
-                "created_at": {
-                    "type": "string",
-                    "format": "date-time"
-                },
-                "created_by_urn": {
-                    "type": "string"
-                },
-                "deleted": {
-                    "type": "integer"
-                },
-                "disabled": {
-                    "type": "integer"
-                },
-                "email": {
-                    "type": "string"
-                },
-                "email_verified_at_ts": {
-                    "type": "integer"
-                },
-                "external_id": {
-                    "type": "string"
-                },
-                "feature_set": {
-                    "$ref": "#/definitions/billing_plan.FeatureSet"
-                },
-                "feature_set_overrides": {
-                    "$ref": "#/definitions/billing_plan.MergeableFeatureSet"
-                },
-                "first_name": {
-                    "type": "string"
-                },
-                "hashed_password": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "string",
-                    "format": "uuid"
-                },
-                "is_super_user_session": {
-                    "type": "integer"
-                },
-                "last_login_ts": {
-                    "type": "integer"
-                },
-                "last_name": {
-                    "type": "string"
-                },
-                "organization_id": {
-                    "type": "string",
-                    "format": "uuid"
-                },
-                "password_updated_at_ts": {
-                    "type": "integer"
-                },
-                "phone": {
-                    "type": "string"
-                },
-                "properties": {
-                    "$ref": "#/definitions/account.Properties"
-                },
-                "role": {
-                    "type": "integer"
-                },
-                "signup_properties": {
-                    "$ref": "#/definitions/account.SignupProperties"
-                },
-                "status": {
-                    "type": "integer"
-                },
-                "test_user_type": {
-                    "type": "integer"
-                },
-                "updated_at": {
-                    "type": "string",
-                    "format": "date-time"
-                },
-                "updated_by_urn": {
-                    "type": "string"
-                },
-                "urn": {
-                    "type": "string"
-                }
-            }
-        },
         "account.AccountWithFeaturesPublic": {
             "type": "object",
             "title": "AccountWithFeaturesPublic",
@@ -2297,10 +2170,6 @@
                 }
             }
         },
-        "account.PropertiesPublic": {
-            "type": "object",
-            "title": "AccountPropertiesPublic"
-        },
         "account.SignupProperties": {
             "type": "object",
             "title": "AccountSignupProperties",
@@ -2313,10 +2182,6 @@
                     "format": "int64"
                 }
             }
-        },
-        "account.SignupPropertiesPublic": {
-            "type": "object",
-            "title": "AccountSignupPropertiesPublic"
         },
         "account_service.TestUserInput": {
             "type": "object",
@@ -2500,33 +2365,9 @@
                 }
             }
         },
-        "billing_plan.MergeableFeatureSet": {
-            "type": "object",
-            "title": "BillingPlanMergeableFeatureSet"
-        },
-        "billing_plan.MergeableFeatureSetPublic": {
-            "type": "object",
-            "title": "BillingPlanMergeableFeatureSetPublic"
-        },
         "organization.MetaData": {
             "type": "object",
             "title": "OrganizationMetaData",
-            "properties": {
-                "onboard_answers": {
-                    "type": "object",
-                    "additionalProperties": {}
-                },
-                "vector_store_id": {
-                    "type": "object",
-                    "additionalProperties": {
-                        "type": "string"
-                    }
-                }
-            }
-        },
-        "organization.MetaDataPublic": {
-            "type": "object",
-            "title": "OrganizationMetaDataPublic",
             "properties": {
                 "onboard_answers": {
                     "type": "object",
@@ -2627,70 +2468,6 @@
                 }
             }
         },
-        "organization.OrganizationPublic": {
-            "type": "object",
-            "title": "OrganizationPublic",
-            "required": [
-                "id",
-                "urn",
-                "created_by_urn",
-                "updated_by_urn",
-                "status",
-                "deleted",
-                "disabled",
-                "updated_at",
-                "created_at",
-                "name",
-                "billing_plan_price_id",
-                "properties",
-                "meta_data"
-            ],
-            "properties": {
-                "billing_plan_price_id": {
-                    "type": "string",
-                    "format": "uuid"
-                },
-                "created_at": {
-                    "type": "string",
-                    "format": "date-time"
-                },
-                "created_by_urn": {
-                    "type": "string"
-                },
-                "deleted": {
-                    "type": "integer"
-                },
-                "disabled": {
-                    "type": "integer"
-                },
-                "id": {
-                    "type": "string",
-                    "format": "uuid"
-                },
-                "meta_data": {
-                    "$ref": "#/definitions/organization.MetaDataPublic"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "properties": {
-                    "$ref": "#/definitions/organization.PropertiesPublic"
-                },
-                "status": {
-                    "type": "integer"
-                },
-                "updated_at": {
-                    "type": "string",
-                    "format": "date-time"
-                },
-                "updated_by_urn": {
-                    "type": "string"
-                },
-                "urn": {
-                    "type": "string"
-                }
-            }
-        },
         "organization.Properties": {
             "type": "object",
             "title": "OrganizationProperties",
@@ -2699,10 +2476,6 @@
                     "type": "string"
                 }
             }
-        },
-        "organization.PropertiesPublic": {
-            "type": "object",
-            "title": "OrganizationPropertiesPublic"
         },
         "response.ErrorResponse": {
             "type": "object",
